# 3s

./: .gitignore  LICENSE.txt
cps3emu/: Cargo.toml
cps3emu/src/: crypto.rs  main.rs
cps3emu/src/gui/: mod.rs  shader.wgsl
crypto/: .gitignore  Makefile  crypto.cpp
mimikyu/: .gitignore  Cargo.toml  notes.txt
mimikyu/data/: DMG_ROM.asm
mimikyu/games/: sfiii3nr1.yaml
mimikyu/scripts/: pc-heatmap.py  pc-markov.py
mimikyu/src/: main.rs
mimikyu/src/cps3/: crypto.rs  mod.rs
mimikyu/src/cpu/: lr35902.rs  mod.rs  sh2.rs
mimikyu/src/gui/: mod.rs
resources/: 3rdStrikeROMCrypter.7z
resources/Stirling/struct/: struct-eng.txt  struct.def
