[package]
name = "cps3emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
yaxpeax-superh = "1.0.0"

[dev-dependencies]
regex = "1.9.5"
