[package]
name = "cps3emu"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.10.0"
imgui = "0.11.0"
imgui-wgpu = "0.24.0"
imgui-winit-support = "0.11.0"
log = "0.4.20"
pollster = "0.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
wgpu = "0.17.0"
winit = "0.27"
yaxpeax-superh = "1.0.0"
zip = "0.6.6"

[dev-dependencies]
regex = "1.9.5"
