[package]
name = "mimikyu"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
# pixels = "0.13.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
winit = "0.27"
yaxpeax-superh = { version = "1.0.0", default-features = false }
zip = "0.6.6"
imgui = "0.11"
imgui-winit-support = "0.11"
imgui-wgpu = "0.24.0"
wgpu = "0.17"
thiserror = "1.0.50"
bitflags = "2.4.1"
yaxpeax-sm83 = "0.2.0"
yaxpeax-arch = "0.2.7"

[dependencies.pixels]
git = "https://github.com/barzamin/pixels.git"
branch = "wgpu-0.17"

[dev-dependencies]
regex = "1.9.5"
